---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLESPACE x OWNER a LOCATION 'b' WITH (random_page_cost=42, seq_page_cost=3);"
---
CreateTableSpaceStmt@0..85
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Tablespace@7..17 "TABLESPACE"
  Whitespace@17..18 " "
  Ident@18..19 "x"
  Whitespace@19..20 " "
  Owner@20..25 "OWNER"
  Whitespace@25..26 " "
  RoleSpec@26..27
    Ident@26..27 "a"
  Whitespace@27..28 " "
  Location@28..36 "LOCATION"
  Whitespace@36..37 " "
  Sconst@37..40 "'b'"
  Whitespace@40..41 " "
  With@41..45 "WITH"
  Whitespace@45..46 " "
  Ascii40@46..47 "("
  DefElem@47..66
    Ident@47..63 "random_page_cost"
    Ascii61@63..64 "="
    Iconst@64..66 "42"
  Ascii44@66..67 ","
  Whitespace@67..68 " "
  DefElem@68..83
    Ident@68..81 "seq_page_cost"
    Ascii61@81..82 "="
    Iconst@82..83 "3"
  Ascii41@83..84 ")"
  Ascii59@84..85 ";"

